<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    tools:context=".FilteringActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:textSize="20sp"
        android:text="@string/bedroomsOption"
        />

    <EditText
        android:id="@+id/bedroomsFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:inputType="number"
        android:hint="@string/bedroomsWanted" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:textSize="20sp"
        android:text="@string/bathroomOption"
        />

    <EditText
        android:hint="@string/bathroomsWanted"
        android:inputType="number"
        android:id="@+id/bathroomsFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:textSize="20sp"
        android:text="@string/leaseOption"
        />

    <EditText
        android:hint="@string/leaseLength"
        android:id="@+id/leaseFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_columnSpan="2"
        android:id="@+id/doneButton"
        android:text="@string/done"
        />


</GridLayout>